2010/07/08
~~~~~~~~~~

* fix two bugs in textile support:
** add a extra +\n+ after captions
** add a extra +.+ after table attributes
* add <code> to textile export

2010/07/08
~~~~~~~~~~

* add +weaver+ and +cacheSweave+ based drivers for all markups.

2010/06/02
~~~~~~~~~~

* Fix bug with one row table and factors

2010/05/19
~~~~~~~~~~

* Fix digits

2010/05/14
~~~~~~~~~~

* Fix bug in org export: +\vert+ replace +\|+

2010/04/20
~~~~~~~~~~

* main functions rewritten: it should be easier to add new markup
* add dimnames in +ascii.table()+
* +style+, +align+ and +valign+ accept matrix
* +t/b/l/rgroup+ accept several groups (in a list)
* +header+ and +footer+ accept an integer (number of lines for the header)
* +t/b/l/rstyle+ can be "h" (for "header")
* +caption+, +caption.level+, +align+, +valign+, +style+, +frame+, +grid+ have +NULL+ default value
* +'nice'+ format: 0 digits if integer

2010/02/05
~~~~~~~~~~

* textile support
* fix a bug in asciidoc labeled list, when labels begin with a number
* fix bug with RweaveDrivers when split = TRUE

2009/11/28
~~~~~~~~~~

* method for +survfit+ and +summary.survfit+ objects
* fix bug in +ascii.CrossTable+ when no test result
* fix extra spaces in org output when style = "s" or "m"

2009/11/25
~~~~~~~~~~

* fix several bugs in +ascii.freqtable+ and +ascii.meanscomp+
* fix several bugs in asciidoc table header

2009/11/24
~~~~~~~~~~

* version 0.4
* remove extra +\n+ when there is no R output
* change the name of Sphinx related functions to ReST
* add methods for +freq()+, +compmeans()+ and +CrossTable()+ in package +descr+
* remove +cgroup+ and +rgroup+ arguments in +ascii()+ function
* four new arguments : +tgroup+ (top), +bgroup+ (bottom), +lgroup+ (left) and +rgroup+ (right)
* new arguments +escape+ and +list.escape+ in +print.ascii()+ function

2009/10/28
~~~~~~~~~~

* "results=ascii" for all drivers
* method for +ftable+ objects
* method for +packageDescription+ objects
* method for +sessionInfo+ objects