@@ -1,10 +1,11 @@
-2010/07/08
+2010/xx/xx
 ~~~~~~~~~~
 
 * fix two bugs in textile support:
 ** add a extra +\n+ after captions
 ** add a extra +.+ after table attributes
 * add <code> to textile export
+* add ability to change opening and closing text of chunk (option +begin+ and +end+)
 
 2010/07/08
 ~~~~~~~~~~
